[fix] - Layout component will see if user is on mobile device to apply specific style

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,10 +1,12 @@
 .wrapper {
-  // display: grid;
   position: relative;
   min-height: 100vh;
   background-color: #fbfbfb;
+}
+.mobile {
   // ! Must check the mobile version
-  // min-width: calc(900px + 10px);
+  display: grid;
+  min-width: calc(900px + 10px);
 }
 .container {
   padding-bottom: 100px;
